# Universal_Clipboard

./: Cargo.toml  README.md
crates/uniclip-api/: Cargo.toml
crates/uniclip-core/: Cargo.toml
crates/uniclip-core/src/: clipboard_item.rs  lib.rs  model.rs  recent.rs
crates/uniclip-crypto/: Cargo.toml
crates/uniclip-crypto/src/: lib.rs
crates/uniclip-daemon/: Cargo.toml
crates/uniclip-daemon/src/: app.rs  clipboard.rs  config.rs  main.rs  mdns.rs  pairing_service.rs  peers.rs
crates/uniclip-discovery/: Cargo.toml
crates/uniclip-discovery/src/: lib.rs  mdns.rs
crates/uniclip-proto/: Cargo.toml
crates/uniclip-proto/src/: lib.rs  wire.rs
crates/uniclip-store/: Cargo.toml
crates/uniclip-store/src/: config.rs  lib.rs  trust_store.rs
crates/uniclip-transport/: Cargo.toml
crates/uniclip-transport/src/: lib.rs  net.rs  peers.rs  session.rs
docs/: README.zh.md
