[package]
name = "uniclip-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
uniclip-core = { path = "../uniclip-core" }
uniclip-proto = { path = "../uniclip-proto" }
uniclip-crypto = { path = "../uniclip-crypto" }
time = "0.3"
arboard = "3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
uuid = { version = "1", features = ["v4"] }
mdns-sd = "0.12"