[package]
name = "uniclip-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
serde_json.workspace = true
mdns-sd.workspace = true
time = "0.3"

uniclip-core = { path = "../uniclip-core" }
uniclip-crypto = { path = "../uniclip-crypto" }
uniclip-proto = { path = "../uniclip-proto" }
uniclip-store = { path = "../uniclip-store" }
uniclip-discovery = { path = "../uniclip-discovery" }
uniclip-transport = { path = "../uniclip-transport" }